chore: add project best practices and documentation
- Add comprehensive .gitignore for Node.js projects
- Add LICENSE file with full MIT license text
- Add CONTRIBUTING.md with development guidelines
- Add SECURITY.md with vulnerability reporting process
- Add CHANGELOG.md for tracking version changes
- Add .editorconfig for consistent coding styles
- Add package-lock.json for reproducible builds
- Add keywords and private flag to package.json

These additions improve project professionalism, maintainability, and contributor experience.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,23 @@
   "name": "sploosh-ai-sports-analytics",
   "version": "0.71.0",
   "description": "This project explores working with a variety of APIs for sports data analysis and visualization.",
+  "private": true,
+  "keywords": [
+    "sports",
+    "analytics",
+    "data-analysis",
+    "nhl",
+    "nfl",
+    "mlb",
+    "mls",
+    "whl",
+    "sports-data",
+    "api",
+    "data-visualization",
+    "seattle-kraken",
+    "seattle-seahawks",
+    "seattle-mariners"
+  ],
   "scripts": {
     "download:kraken": "npm run download:nhl:kraken",
     "download:mariners": "npm run download:mlb:mariners",
